interpreter/examples/bad/type/bad_lambda_assignment.dl
{
    function f(fun z) return 1.
    f = lambda (x): return 2;
    print f(1)
}
